# itu-sdse-project

./: .dvcignore  .gitignore  README.md  dagger.json  getting_started.md
.dvc/: .gitignore
.github/workflows/: train.yml
ccds/: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  train.dockerfile  train_dummy.dockerfile
ccds/data/processed/artifacts/: cat_missing_impute.csv  scaler.pkl
ccds/data/raw/: .gitignore
ccds/docs/: Questions_for_TAs.md  current_task.md  mkdocs.yml  tasks.md
ccds/docs/docs/: index.md
ccds/itu_sdse_project/: __init__.py  dataset.py  features.py  pipeline.py  pipeline_dummy.py  plots.py
ccds/itu_sdse_project/modeling/: cleaners.py  loaders.py  predict.py  train.py
ccds/models/: model.pkl
ccds/notebooks/: 01-mikke-original_adapted.ipynb
dagger/: go.mod  main.go
